@@ -1,5 +1,10 @@
 2010-02-22  Abel Cheung  <abelcheung@gmail.com>
 
+	* wp-scorerender.php:
+	- (scorerender_add_ie6_style) Further removal of ancient WP support.
+
+2010-02-22  Abel Cheung  <abelcheung@gmail.com>
+
 	* misc/tint-image.php:
 	- Accept user supplied color from GET variable.
 
